--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "socket.io": "^4.7.5",
+    "ws": "^8.18.0"
   }
 }
